# vet-ai

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini  test_herb_diagnosis.py
backend/: api.py  settings.py
backend/element/: __init__.py  ele_diagnosis.py
backend/routers/: diagnosis.py
config/: logger.py
core/ai_diagnosis/: __init__.py  diagnosis.py  herb_diagnosis.py  re_diagnosis.py
frontend/vet-ai/: package.json
frontend/vet-ai/src/: App.tsx  app.css  index.css
frontend/vet-ai/src/components/: icons.tsx
frontend/vet-ai/src/components/common/: NameTitle.tsx  VetCard.tsx  VetSubCard.tsx
test/: debug_dialog_diagnosis.py  debug_json_parsing.py  debug_react_agent.py  final_test.py  test_cus_diagnosis.py  test_diagnosis.py  test_diagnosis_workflow.py  test_dialog_diagnosis.py  test_prefix_json.py  test_re_diagnosis.py  test_react_agent.py
utils/json/: fix_broken_json.py
utils/parser/: markdown_json_list_parser.py  table.py
utils/react_tool/: toolkit.py
